	      	 tables more efficiently
	      * neater examples

2010-03-17    Version 0.9.6 (beta)
	      + plots/wigner_function
	      + hamiltonians: heisenberg, hubbard, bose_hubbard, holstein
	      + utils/fermion_ladder
	      + utils/op_list
	      - utils/fidelity (unnecessary)
	      - hamiltonian/graph (replaced by utils/op_list)
	      * numerous small improvements
	      * functions handling large operators use sparse matrices
	      * Born-Markov package cleaned up and renamed: +lindblad => +markov
	      * renamed lindblad/superop => utils/superop_lindblad
	      * utils/angular_momentum returns a cell vector, caches results

2010-04-04    Version 0.9.7 (beta)
	      + markov/lindblad_ops
	      + gates: mod_add, mod_mul, phase
	      + examples/shor_factorization
	      * state/propagate also accepts Lindblad operators
	      * state/entropy also gives entropy of entanglement
	      * state/measure can discard measured subsystems
	      * utils/angular_momentum takes a dimension instead of j as a param
	      * gate/qft caches its results
	      * invariants: canonical, makhlin, max_concurrence use compatible params
	      * more functions use sparse matrices

2010-08-26    Version 0.9.8
	      - removed the plots package
	      * renamed plots:
 	        tomography          => state/plot,
	        weyl_chamber        => invariant/plot_weyl_2q,
	        makhlin_gates       => invariant/plot_makhlin_2q,
		bloch_sphere        => utils/plot_bloch_sphere,
		adiabatic_evolution => utils/plot_adiabatic_evolution,
		wigner_function     => utils/plot_pcolor
	      * renamed ho/ladder => utils/boson_ladder
	      * renamed gates: mod_add => mod_inc
	      + gates: mod_add
	      * gates: mod_inc, mod_mul input syntax
	      * examples: teleportation and superdense_coding now can use qudits
	      * restored Matlab 7.6 compatibility


2010-09-??    Version 0.9.9
	      * state/concurrence fixed
	      * state/purity does not normalize the state first